# lmring

./: .env.example  .env.selfhost.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  PRIVACY.md  README.md  TERMS.md  codecov.yml  docker-compose.yml  knip.config.ts  lint-staged.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  turbo.json
.changeset/: README.md  config.json  publish-theme.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-preview.yml.disabled  deploy-prod.yml  release.yml
apps/engine/: .gitignore  README.md  cost.py  metrics.py  models.py  pyproject.toml  runner.py
apps/engine/assemblies/: __init__.py  bare-agent.md  bare_agent.py  loader.py  oh-my-claudecode.md  oh_my_claudecode.py
apps/engine/suites/legal_contract_review/: .gitignore  README.md  __init__.py  dataset.py  download.py  scorer.py  task.py  tools.py
apps/engine/suites/legal_contract_review/fixtures/: cuad_subset.json
apps/engine/suites/legal_contract_review/tests/: test_scorer.py  test_tools.py
apps/engine/tests/: test_assemblies.py  test_cost.py  test_metrics.py
apps/web/: biome.json  checkly.config.ts  components.json  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.mts
docs/: README.zh-CN.md
scripts/: generate-zeroeval-seed.mjs  run-zeroeval-seed.mjs  snapshot-zeroeval.mjs  zeroeval-snapshot.json
sidecar/: .env.example  requirements.txt  sidecar.py
(+437 files in other folders)
